# fdo-desktop-entry

./: LICENSE  README  fdo-desktop-entry.cabal
System/Freedesktop/: DesktopEntry.hs
System/Freedesktop/DesktopEntry/: Standard.hs
